testsuite/tests/typing-layouts-block-indices/block_indices_using_ptr_primitives.disabled.compilers.reference
File "block_indices_using_ptr_primitives.ml", line 28, characters 34-45:
28 | let _fail_when_no_extensions () = (.contents)
                                       ^^^^^^^^^^^
Error: This construct requires the stable version of the extension "layouts", which is disabled and cannot be used
